tests/paczka2/big_fuzzy/11115056.err
Error in line 5: itM1 S952 81,43
Error in line 7: KSR A50 19,8
Error in line 12: S443 S443 13,3
Error in line 16: S443 A201 37,3
Error in line 19: S443 S952 223,10
Error in line 22: itM1 A50 190,9
Error in line 18: S443 S952 90,3
Error in line 25: itM1 S952 30,7
Error in line 40: KSR A50 8,4
Error in line 49: itM1 S443 67,4
Error in line 52: itM1 A201 51,6
Error in line 56: KSR S443 158,07
Error in line 55: KSR S443 84,4
Error in line 53: itM1 S952 61,5
Error in line 62: Y5BzCdjCxf S443 27,8
Error in line 68: 8J8JnUHQI A201 -1,1
Error in line 65: Y5BzCdjCxf A201 81,1
Error in line 41: S443 A201 12,2
Error in line 77: S443 S443 41,1
Error in line 80: S443 S952 14,1
Error in line 94: KSR S952 29,3
Error in line 76: itM1 A201 176,3
Error in line 99: S443 S443 24,3
Error in line 111: itM1 S443 91,1
Error in line 113: S443 A50 5,1
Error in line 115: itM1 A201 31,7
Error in line 114: KSR A201 70,5
Error in line 127: Y5BzCdjCxf A50 86,0
Error in line 138: Y5BzCdjCxf S952 45,3
Error in line 142: Y5BzCdjCxf S443 99,6
Error in line 144: Y5BzCdjCxf A50 82,1
Error in line 147: S443 A201 32,9
Error in line 154: KSR S952 43,1
Error in line 161: itM1 A201 50,9
Error in line 139: qT5 A201 54,5
Error in line 165: Y5BzCdjCxf S952 24,9
Error in line 166: qT5 S952 23,7
Error in line 170: qT5 S443 60,1
Error in line 181: 8J8JnUHQI A50 156,3
Error in line 176: itM1 A50 67,6
Error in line 197: Y5BzCdjCxf A201 17,0
Error in line 205: itM1 S952 4,2
Error in line 209: 8J8JnUHQI S952 68,2
Error in line 207: qT5 A201 78,5
Error in line 216: KSR A201 64,5
Error in line 224: KSR S952 33,7
Error in line 222: qT5 A50 17,7
Error in line 241: Y5BzCdjCxf S443 54,2
Error in line 239: KSR S443 1,2
